--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ footer{
   justify-content: center;
   align-content: middle;
 }
-p{
-  margin: -10px 0px 0px 0px;
-}
 a{
   color:white;
 }
@@ -60,12 +57,13 @@ a{
 }
 .description{
   min-height: 100px;
-  width: 630px;
+  width: 600px;
   background-color: lightslategray;
   border-style: solid;
   border-width: 5px;
   border-radius: 10px;
   border-color: rgb(253,210,3);
+  padding: 0px 20px 0px 20px;
 }
 .facts{
   color: white;
@@ -96,6 +94,15 @@ a{
 .link{
   vertical-align: top;
   margin-top: -30px;
+}
+.counter{
+  margin: -10px 0px 0px 0px;
+}
+#go{
+  background: rgb(250,89,7);
+  border-radius: 4px;
+  margin: 0px 0px 2px 3px;
+  border-color: white;
 }
 #mini{
   width: 50px;
